--- a/vishnu.html
+++ b/vishnu.html
@@ -21,7 +21,7 @@
    </style> 
  </head> 
  <body> 
-   <img src="content://com.android.externalstorage.documents/tree/primary%3Ahtml/document/primary%3Ahtml%2Fkohli%20(1).jpg" height="200" width="200"> 
+   <img src="kohli (1).jpg" height="200" width="200"> 
    <h1>Bio-Data</h1> 
    <p> 
      Name: Vishnu dev 
